-	There is a dimension issue in getting q_s_dot.  For some reason qp_rhs seems to be retuning q_s_dot as the wrong dimensions

--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -345,7 +345,6 @@
    },
    "outputs": [
     {
-<<<<<<< HEAD
      "data": {
       "text/plain": [
        "array([0, 0])"
@@ -354,17 +353,6 @@
      "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
-=======
-     "ename": "TypeError",
-     "evalue": "q_rhs_H_l_nou() takes exactly 4 arguments (16 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-1ebcd4f5dec7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_rhs_H_l_nou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m233\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m43\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m49\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m59\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m93\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m93\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m21\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: q_rhs_H_l_nou() takes exactly 4 arguments (16 given)"
-     ]
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
     }
    ],
    "source": [
@@ -373,11 +361,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -390,20 +377,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.q_rhs_H_l_u(q_s, p_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -416,20 +399,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.p_rhs_H_l_u(q_s, p_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -442,20 +421,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.q_rhs_H_l(q_s, p_l, u_s, lambda_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -468,20 +443,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.p_rhs_H_l(q_s, p_l, u_s, lambda_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -494,20 +465,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.qp_rhs_H_l(q_s, p_l, u_s, lambda_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -520,20 +487,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.q_rhs_H_mf_u(q_mf, p_mf, u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -546,20 +509,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "p_mf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -572,20 +531,16 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.p_rhs_H_mf_u(q_mf, p_mf, u_mf) # sanity check it is same dimensions as bat.q_rhs_H_l_u(q_s, p_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-<<<<<<< HEAD
    "outputs": [
     {
      "data": {
@@ -598,27 +553,12 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "outputs": [],
-   "source": [
-    "# bat.q_rhs_H_mf(q_mf, p_mf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.q_rhs_H_mf(q_mf, p_mf, u_mf, u_s)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 22,
    "metadata": {
     "collapsed": false
@@ -635,20 +575,12 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.p_rhs_H_l(q_s, p_l, u_s, lambda_l)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 23,
    "metadata": {
     "collapsed": false
@@ -665,20 +597,12 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.p_rhs_H_mf(q_mf, p_mf,u_mf, u_s)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 24,
    "metadata": {
     "collapsed": false
@@ -695,35 +619,13 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "source": [
     "bat.qp_rhs_H_mf(q_mf, p_mf, u_mf, u_s)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 25,
-=======
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "bat.q_rhs_H_mf(2,3,4,1, 2,3,4,1, 2,3,4,1, 2,3,4,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
->>>>>>> 0a6b692590ebe76453bbe9daf35c4132dd1c6643
    "metadata": {
     "collapsed": false
    },
@@ -744,6 +646,7 @@
    "outputs": [],
    "source": [
     "state_dim=bat.state_dim\n",
+    "\n",
     "q_s_dot, p_l_dot, p_mf_dot = qp_vec[:state_dim], qp_vec[state_dim:state_dim*2], qp_vec[state_dim*2:]"
    ]
   },
@@ -932,12 +835,113 @@
    },
    "outputs": [],
    "source": [
-    "# H_l = bat.H_l(q_1_0, q_B_0, p_1_0, p_B_0, u_B, q_1_0, q_B_0, v_c_u_0, v_c_1_0, c_1, R_0, R_1, v_a, Q_0, beta, v_N)"
+    "H_l = bat.H_l(q_s, p_l, u_s, lambda_l)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "H_l_u = H_l = bat.H_l_u(q_s, p_l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "H_l_nou = bat.H_l_nou(q_s, p_l, u_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print H_l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print H_l_u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print H_l_nou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H_l[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -948,7 +952,7 @@
        "(10,)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,24 +963,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'float' object has no attribute '__getitem__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-4aa7fefb872f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0malpha_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malphas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH_l_D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_dot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mBeta_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBeta_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBetas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.pyc\u001b[0m in \u001b[0;36malphas\u001b[0;34m(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, p_l_dot)\u001b[0m\n\u001b[1;32m    350\u001b[0m                         \u001b[0;34m(\u001b[0m\u001b[0mH_mf_nou\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mH_l_D\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_rhs_H_mf_u\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp_rhs_H_mf_u\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    351\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 352\u001b[0;31m         \u001b[0malpha_l_j\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mH_l_u\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_rhs_H_l_nou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp_rhs_H_l_nou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_dot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    353\u001b[0m                         \u001b[0;34m(\u001b[0m\u001b[0mH_l_nou\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mH_l_D\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_rhs_H_l_u\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp_rhs_H_l_u\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_dot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m         \u001b[0malpha_mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha_mf_j\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object has no attribute '__getitem__'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1.]\n",
+      " [1. 1.]]\n"
      ]
     }
    ],
+   "source": [
+    "print q_s_dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# state_dim=sliding_window_instance.state_dim, Gamma = sliding_window_instance.Gamma, u_0 = u_0, q_mf=q_mf, u_mf=u_mf\n",
     "# 0.0, qp_vec, state_dim=sliding_window_instance.state_dim, Gamma = sliding_window_instance.Gamma, u_0 = u_0, q_mf=q_mf, u_mf=u_mf\n",
@@ -984,13 +1018,54 @@
     "# for now\n",
     "q_mf_dot = q_mf\n",
     "H_l_D = 1 # H_l\n",
-    "u_0 = u_B\n",
-    "p_mf = p_l\n",
+    "# u_0 = u_B\n",
+    "# p_mf = p_l\n",
     "\n",
-    "u_s = u_B\n",
+    "# u_s = u_B\n",
     "p_l = bat.L_l_q_dot(q_s, q_s_dot, u_s)\n",
     "p_mf = bat.L_mf_q_dot(q_mf, q_mf_dot, u_mf)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p_l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p_mf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "alpha_mf, alpha_l = alphas(bat, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, p_l_dot)\n",
     "Beta_mf, Beta_l = Betas(bat, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l)"
